# flask-newui

./: .gitignore  AFS-README.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  afs-spec.md  conftest.py  flask-newui.afs.json  pip_runbook.md  pyproject.toml  run_tests.py  setup.py  validate_afs.py
docs/: conditional-rendering.md  getting-started.md  list-rendering.md  two-way-data-binding.md
examples/: ajax_loading.py  basic_forms.py  component_lifecycle.py  debug_tools.py  dynamic_content.py  dynamic_lists.py  form_binding.py  nested_components.py  realtime_chat.py  spa_routing.py  state_management.py  tailwind_modern_ui.py  todo_app.py
newui/: __init__.py  cli.py  components.py  composition.py  devtools.py  newui.py  routing.py  stores.py  websocket.py
newui/core/: __init__.py  ajax.py  components.py  renderer.py  state.py
newui/static/: newui.css  newui.js
tests/: __init__.py  test_basic.py  test_components.py  test_core.py
