[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-newui"
dynamic = ["version"]
description = "A modern reactive frontend framework that bridges Flask/Jinja2 with modern UI capabilities"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "NewUI Contributors", email = "contact@flask-newui.dev"},
]
maintainers = [
    {name = "NewUI Contributors", email = "contact@flask-newui.dev"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
]
keywords = ["flask", "jinja2", "frontend", "framework", "reactive", "ui", "components"]
requires-python = ">=3.7"
dependencies = [
    "Flask>=1.1.0",
    "Jinja2>=2.11.0",
    "MarkupSafe>=2.0.0",
]

[project.optional-dependencies]
websocket = [
    "Flask-SocketIO>=5.0.0",
]
dev = [
    "pytest>=6.0",
    "pytest-flask>=1.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "pre-commit>=2.0",
]
examples = [
    "Flask-SocketIO>=5.0.0",
]
all = [
    "Flask-SocketIO>=5.0.0",
    "pytest>=6.0",
    "pytest-flask>=1.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "pre-commit>=2.0",
]

[project.urls]
Homepage = "https://github.com/smbrandonjr/flask-newui"
Documentation = "https://flask-newui.dev/docs"
Repository = "https://github.com/smbrandonjr/flask-newui"
"Bug Reports" = "https://github.com/smbrandonjr/flask-newui/issues"
Changelog = "https://github.com/smbrandonjr/flask-newui/blob/main/CHANGELOG.md"

[project.scripts]
newui = "newui.cli:main"

[tool.setuptools]
packages = ["newui", "newui.core"]
include-package-data = true

[tool.setuptools.package-data]
newui = ["static/*.js", "static/*.css"]

[tool.setuptools_scm]
write_to = "newui/_version.py"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# addopts = "--cov=newui --cov-report=html --cov-report=term-missing"  # Uncomment if pytest-cov is installed

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false